bump arcadedb version